--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -49,6 +49,7 @@
 				"ms-python.python",
 				"ms-python.vscode-pylance",
 				"yzhang.markdown-all-in-one",
+				"infosec-intern.yara"
 			]
 		}
 	},
